Styled info images fixed blurry images (webkit)

--- a/assets/style.css
+++ b/assets/style.css
@@ -247,7 +247,28 @@ nav {
 
 .info-img {
   max-width: 100%;
-  height: 70%;
+  /* Fix blurry Images: https://stackoverflow.com/questions/15464055/css-transition-effect-makes-image-blurry-moves-image-1px-in-chrome */
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0) scale(1, 1);
+}
+
+.main-img {
+  width: 100%;
+}
+
+.smaller-img-wrapper {
+  margin-top: 16px;
+  margin-bottom: 20px;
+}
+
+.smaller-img {
+  width: 100%;
+  height: 150px;
+}
+
+.info-img:hover {
+  opacity: 0.7;
+  transition: 0.5s;
 }
 
 .info-h3 {
@@ -311,105 +332,6 @@ nav {
 
 .info-window-img {
   width: 250px;
-}
-
-/* MODALLLLS */
-/* Image Modals */
-/* Style the Image Used to Trigger the Modal */
-.main-img {
-  width: 31%;
-}
-
-.smaller-img-wrapper {
-  margin-top: 16px;
-  margin-bottom: 20px;
-}
-
-.smaller-img {
-  width: 31%;
-  height: 100%;
-}
-
-#myImg, #myImg2, #myImg3, #myImg4, #myImg5, #myImg6, #myImg7, #myImg8, #myImg9 {
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-#myImg:hover, #myImg2:hover, #myImg3:hover, #myImg4:hover, #myImg5:hover, #myImg6:hover, #myImg7:hover, #myImg8:hover, #myImg9:hover {
-    opacity: 0.7;
-}
-
-.modal-wrapper {
-  margin-bottom: 20px;
-}
-
-/* The Modal (background) */
-.small-modal-image-wrapper {
-  height: 140px;
-}
-
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
-
-/* Modal Content (Image) */
-.modal-content {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-}
-
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
-#caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #ccc;
-  padding: 10px 0;
-  height: 150px;
-}
-
-/* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
-
-@keyframes zoom {
-  from {transform:scale(0)}
-  to {transform:scale(1)}
-}
-
-/* The Close Button */
-.close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
 }
 
 /* Contact Form */
